lib/tools/orbit/test_output/custom_functions_test.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/custom_functions_test.orb: tests/custom_functions_test.orb:29:15: Parse error
let numbers = [5, 10, 15, 20, 25];
              ^
